assets/style.css
/*ADDING BACKGROUND/PADDING TO EVERYTHING TO GET GENERAL SHAPE*/
body{
    background-color: #009688;
    font-family: sans-serif;   
    margin: 0;
    padding: 20px
}
/*ADDED BORDER BOX*/
*{
    box-sizing: border-box;
}

.quiz-container{
    background-color: #ffffff;
    border-radius: 10px;
    margin: 40px auto;
    max-height: 500px;
    max-width: 700px;
    padding: 30px;
} 

/*ADDING IN STYLES FOR QUESTION HEADER*/
.question-number h3{
    border-bottom: 1px solid #ccc;
    color: #009688;
    margin: 0;
    padding-bottom: 10px;
}
/*ADDING IN STYLES FOR QUESTIONS*/
.question{
    color: #000000;
    font-size: 22px;
    padding: 20px 0;
}
/*ADDING IN STYLES FOR ANSWER OPTIONS*/
.options div{
    background-color: #cccccc;
    font-size: 16px;
    color: 000000;
    cursor: pointer;
    margin-bottom: 10px;
    padding:15px;
    border-radius: 5px;
    position: relative;
    overflow: hidden;
}

.options div.disabled{
    pointer-events: none;
}


/*ADDED ANIMATION TO CORRECT ANSWERS*/
.options div.correct{
    color: #fff;
    z-index: 1;
}
.options div.correct::before{
    content: "";
    position: absolute;
    left:0;
    top:0;
    width: 100%;
    height: 100%;
    background-color: green;
    z-index: -1;
    animation: animateBackground 1s ease;
    animation-fill-mode: forwards;
}
@keyframes animateBackground{
    0%{
        transform: translateX(-100%);
    }
    100%{
        transform: translateX(0%)
    }
}


/*ADDED ANIMATION TO INCORRECT ANSWERS*/
.options div.incorrect{
    color: #fff;
    z-index: 1;
}
.options div.incorrect::before{
    content: "";
    position: absolute;
    left:0;
    top:0;
    width: 100%;
    height: 100%;
    background-color: red;
    z-index: -1;
    animation: animateBackground 1s ease;
    animation-fill-mode: forwards;
}
@keyframes animateBackground{
    0%{
        transform: translateX(-100%);
    }
    100%{
        transform: translateX(0%)
    }
}
/*ADDING IN BUTTON STYLES FOR SHAPE AND SIZE*/
.button .btn{
    background-color: #009688;
    border: none;
    border-radius: 5px;
    color: #ffffff;
    cursor: pointer;
    display: inline-block;
    font-size: 20px;
    margin: 15px 0;
    padding:15px 50px;
}

.quiz-complete{
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0,0, 0.9);
    z-index: 10;
    display: none;
    align-items: center;
    justify-content: center;
}
.quiz-complete .show{
    display: flex;
}

.quiz-complete .box{
    background-color: #009688;
    padding: 30px;
    border-radius: 10px;
    text-align: center;
    max-width: 700px;
    flex-basis: 700px;
    color: #ffffff;
}
.quiz-complete .box h1{
    font-size: 36px;
    margin:0 0 20px;
}
.quiz-complete .box button{
    padding: 15px 50px;
    border: none;
    background-color: silver;
    border-radius: 5px;
    font-size: 16px;
    margin: 15px 0 20px;
    color: #ffffff;
}

